--- a/nasimInfo.html
+++ b/nasimInfo.html
@@ -59,7 +59,7 @@
       <p>Frontend Developer | React & Next.js Specialist</p>
       <nav>
         <a href="#about">About Me</a>
-        <a href="#portfolio">Portfolio</a>
+        <a href="#https://nasim-mondal.vercel.app">Portfolio</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -87,7 +87,7 @@
         <h2>Portfolio</h2>
         <p>
           Check my projects here:
-          <a href="https://your-portfolio-link.com" target="_blank"
+          <a href="https://nasim-mondal.vercel.app/" target="_blank"
             >My Portfolio</a
           >
         </p>
@@ -117,7 +117,7 @@
           </fieldset>
         </form>
         <p>
-          Email: <a href="mailto:example@example.com">example@example.com</a>
+          Email: <a href="mailto:mdnasimmondal622@gmail.com">mdnasimmondal622@gmail.com</a>
         </p>
         <p>Phone: +880123456789</p>
       </section>
@@ -203,7 +203,7 @@
     <footer>
       <p>
         © 2025 Md. Nasim Mondal |
-        <a href="https://your-portfolio-link.com" target="_blank">Portfolio</a>
+        <a href="https://nasim-mondal.vercel.app" target="_blank">Portfolio</a>
       </p>
     </footer>
   </body>
